--- a/index.html
+++ b/index.html
@@ -6,34 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section class="top center">
-        <h1 class="heading">Добро пожаловать на мой сайт !</h1>
-        <div class="sub-heading">
-            <div class="sub-heading__text">
-                <span >Вам предстоит пройти несколько увлекательных игр. Если готов нажимай 
-                <b>поехали</b> и <b>приступай</b>
-                </span>
+        <div class="top-box">
+            <h1 class="heading">Добро пожаловать на мой сайт !</h1>
+            <div class="sub-heading">
+                <div class="sub-heading__text">
+                    <span >Вам предстоит пройти несколько увлекательных игр. Если готов нажимай 
+                    <b>поехали</b> и <b>приступай</b>
+                    </span>
+                </div>
             </div>
+            <button class="btn-go" type="submit">Поехали!</button>        
         </div>
-        <button class="btn-go" type="submit">Поехали!</button>    
     </section>
     <div class="games-box center">
         <div class="games-box__game">
-            <img src="./img/game_1.png" alt="Игра 1">
-            <p class="games-box__game__name">Игра 1</p>  
+            <picture>
+                <source media="(max-width: 1240px)" srcset="./img/game_1_mobile.png">
+                <source media="(min-width: 1241px)" srcset="./img/game_1.png">
+                <img src="./img/game_1.png" alt="Игра 1">
+            </picture>
+            <p class="games-box__game-name">Игра 1</p>  
         </div>    
         <div class="games-box__game">
-            <img src="./img/game_2.png" alt="Игра 2">
-            <p class="games-box__game__name">Игра 2</p>  
+            <picture>
+                <source media="(max-width: 1240px)" srcset="./img/game_2_mobile.png">
+                <source media="(min-width: 1241px)" srcset="./img/game_2.png">
+                <img src="./img/game_2.png" alt="Игра 2">
+            </picture>
+            <p class="games-box__game-name">Игра 2</p>  
         </div>    
         <div class="games-box__game">
-            <img src="./img/game_3.png" alt="Игра 3">
-            <p class="games-box__game__name">Игра 3</p>  
+            <picture>
+                <source media="(max-width: 1240px)" srcset="./img/game_3_mobile.png">
+                <source media="(min-width: 1241px)" srcset="./img/game_3.png">
+                <img src="./img/game_3.png" alt="Игра 3">
+            </picture>
+            <p class="games-box__game-name">Игра 3</p>  
         </div>    
     </div>
 </body>
