before adding JS

--- a/index.html
+++ b/index.html
@@ -50,5 +50,17 @@
             <p class="games-box__game-name">Игра 3</p>  
         </div>    
     </div>
+    <section class="game-1 center">
+        <div class="game-1-box">
+            <h2 class="game-1__heading">Времена года!</h2>
+            <div class="game-1__sub-heading">
+                <div class="game-1__sub-heading__text">
+                    Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится
+                </div>
+            </div>
+            <button class="game-1__btn-go" type="submit">Играть!</button>        
+        </div>
+        <img class="game-1__pict" src="./img/game_1.svg" alt="Игра 1">
+    </section>
 </body>
 </html>
