added launchGameOne_2 func

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится
                 </div>
             </div>
-            <button onclick="launchGameOne()" class="game-1__btn-go" type="submit">Играть!</button>        
+            <button onclick="launchGameOne_2()" class="game-1__btn-go" type="submit">Играть!</button>        
         </div>
         <img class="game-1__pict" src="./img/game_1.svg" alt="Игра 1">
     </section>
