added game3 script

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     Компьютер загадывает загадку, вам необходимо ее угадать, если вы дадите не правильный ответ, то компьютер даст вам подсказку. У вас будет три попытки и две подсказки.
                 </div>
             </div>
-            <button onclick="launchGameTwo()" class="game-3__btn-go" type="submit">Играть!</button>        
+            <button onclick="launchGameThree()" class="game-3__btn-go" type="submit">Играть!</button>        
         </div>
     </section>
     <div class="bottom">
