added game3 mobile

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         </div>
     </section>
     <div class="bottom">
+        <p class="bottom__text">Все права защищены</p>
     </div>
     <script src="./script.js"></script>
 </body>
